# 211-331_Skrypnik

LR1/: CMakeLists.txt  README.md  authwindow.cpp  authwindow.h  authwindow.ui  clean_project.ps1  credentialsmodel.cpp  credentialsmodel.h  generate_vault.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  run_project.ps1  vault.enc
LR1/PasswordManagerProtector/: CMakeLists.txt  PasswordManagerProtector.cpp
LR2/: README.md
LR2/client/: cgctl.cpp
LR2/driver/: aes.h  cryptoGuard.c  cryptoGuard.inf  cryptoGuard.rc
